<resources>
    <string name="app_name">JCCT1_Android_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout_text">Logout</string>
    <string name="store_image">Museum image</string>
    <string name="store_name">Store name</string>
    <string name="store_desc">Random description of a museum</string>
    <string name="no_data">No data!</string>
    <string name="museum_desc">Random museum description</string>
    <string name="more_info">More info</string>
    <string name="buy_ticket">Buy ticket</string>
    <string name="museum_name">Museum name</string>
    <string name="inner_museum">Inner_Museum</string>
</resources>