<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    android:foreground="?android:selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/museum_desc"
            android:layout_width="392dp"
            android:layout_height="51dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/museum_desc"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/more_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_info" />

        <Button
            android:id="@+id/buy_ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_ticket" />

    </LinearLayout>
</androidx.cardview.widget.CardView>